[gd_scene load_steps=18 format=3 uid="uid://bp6xyyebgvkq1"]

[ext_resource type="Script" path="res://enemies/dragon.gd" id="1_5pba3"]
[ext_resource type="Texture2D" uid="uid://cpkor77jab117" path="res://monsters1/PNG/dragon/fire_attack.png" id="2_fm1s2"]
[ext_resource type="Texture2D" uid="uid://cogrnc13jat15" path="res://monsters1/PNG/dragon/walk.png" id="3_wxbva"]
[ext_resource type="AudioStream" uid="uid://07pm7c3jgv0m" path="res://sounds/dragon fire.mp3" id="4_4vcdw"]
[ext_resource type="AudioStream" uid="uid://cqx3ikqj84w3l" path="res://sounds/body drop.mp3" id="5_qeh4m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecatt"]
size = Vector2(152.5, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tst7m"]
size = Vector2(77.5, 117.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4ymv"]
size = Vector2(162.5, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_joy01"]
size = Vector2(92.5, 67.5)

[sub_resource type="Animation" id="Animation_2atdv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dsbbv"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_3g32c"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_wfo2g"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6yb64"]
_data = {
"RESET": SubResource("Animation_2atdv"),
"attack": SubResource("Animation_dsbbv"),
"death": SubResource("Animation_3g32c"),
"walk": SubResource("Animation_wfo2g")
}

[sub_resource type="Animation" id="Animation_inrjd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackZone:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_u8n7m"]
resource_name = "fire_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackZone:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h5wa4"]
_data = {
"RESET": SubResource("Animation_inrjd"),
"fire_attack": SubResource("Animation_u8n7m")
}

[node name="Dragon" type="CharacterBody2D" groups=["enemies"]]
top_level = true
position = Vector2(5, -26)
scale = Vector2(0.4, 0.4)
collision_layer = 4
collision_mask = 263
platform_floor_layers = 4294967041
platform_wall_layers = 1
script = ExtResource("1_5pba3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-5, -13)
texture = ExtResource("3_wxbva")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6.25, 15)
shape = SubResource("RectangleShape2D_ecatt")

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="Pivot"]
visible = false
position = Vector2(90, 0)
texture = ExtResource("2_fm1s2")
hframes = 5

[node name="AttackArea" type="Area2D" parent="Pivot"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackArea"]
position = Vector2(113.75, 6.24999)
shape = SubResource("RectangleShape2D_tst7m")

[node name="HitBox" type="Area2D" parent="Pivot" groups=["enemy_hitbox"]]
collision_layer = 32
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitBox"]
position = Vector2(-6.25, 15)
shape = SubResource("RectangleShape2D_y4ymv")

[node name="AttackZone" type="Area2D" parent="Pivot" groups=["enemy_attack_zone"]]
collision_layer = 64
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackZone"]
position = Vector2(101.25, 8.74999)
shape = SubResource("RectangleShape2D_joy01")

[node name="RayCast2D_Cliff" type="RayCast2D" parent="Pivot"]
position = Vector2(70, 50)
target_position = Vector2(60, 72)

[node name="RayCast2D_FloorCheck" type="RayCast2D" parent="Pivot"]
position = Vector2(-2.5, 50)
target_position = Vector2(0, 90)

[node name="RayCast2D_WallCheck" type="RayCast2D" parent="Pivot"]
position = Vector2(70, 20)
target_position = Vector2(60, 0)

[node name="RayCast2D_JumpFarCheck" type="RayCast2D" parent="Pivot"]
position = Vector2(70, 32.5)
target_position = Vector2(160, 0)

[node name="RayCast2D_JumpUpCheck" type="RayCast2D" parent="Pivot"]
position = Vector2(70, -20)
target_position = Vector2(90, -160)

[node name="RayCast2D_JumpDownCheck" type="RayCast2D" parent="Pivot"]
position = Vector2(70, 50)
target_position = Vector2(160, 160)

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4vcdw")
volume_db = -10.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qeh4m")
volume_db = -10.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6yb64")
}
autoplay = "walk"
speed_scale = 1.2

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h5wa4")
}

[connection signal="area_entered" from="Pivot/AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="Pivot/AttackArea" to="." method="_on_attack_area_area_exited"]
[connection signal="area_entered" from="Pivot/AttackZone" to="." method="_on_attack_zone_area_entered"]
